--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,11 @@ jwt.expiration=3600000
 
 ## Eureka Server Configuration
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
+##Email Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=asur0825om@gmail.com
+spring.mail.password=bhzbfhkmxcxdjhzh
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
