adding google auth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,12 @@ server.port=8083
 #Routes Configuration
 spring.cloud.gateway.server.webflux.routes[0].id=USERSERVICE
 spring.cloud.gateway.server.webflux.routes[0].uri=lb://USERSERVICE
-spring.cloud.gateway.server.webflux.routes[0].predicates[0]=Path= /nepoHeal/auth/**, /nepoHeal/user/**
+spring.cloud.gateway.server.webflux.routes[0].predicates[0]=Path= /nepoHeal/auth/**, /nepoHeal/user/**, /nepoHeal/googleAuth
 
 spring.cloud.gateway.server.webflux.routes[1].id=APPOINTMENTBOOKING
 spring.cloud.gateway.server.webflux.routes[1].uri=lb://APPOINTMENTBOOKING
 spring.cloud.gateway.server.webflux.routes[1].predicates[0]=Path= /nepoHeal/appointment/**
 
+spring.cloud.gateway.server.webflux.routes[2].id=PRESCRIPTIONSERVICE
+spring.cloud.gateway.server.webflux.routes[2].uri=lb://PRESCRIPTIONSERVICE
+spring.cloud.gateway.server.webflux.routes[2].predicates[0]=Path= /nepoHeal/prescription/**
