--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,7 @@ spring.mail.username=asur0825om@gmail.com
 spring.mail.password=bhzbfhkmxcxdjhzh
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+## Google Client Id
+google.client-id=319738992490-g2dvi6ttail437h7irp5n2ugndb9fc8p.apps.googleusercontent.com
+google.client-secret=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
