--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,12 @@
 			<version>3.5.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.api-client</groupId>
+			<artifactId>google-api-client</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
