--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,11 @@ spring.main.allow-circular-references=true
 
 ##Eureka client configuration
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
+##Email configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=asur0825om@gmail.com
+spring.mail.password=bhzbfhkmxcxdjhzh
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
