--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 spring.application.name=ApiGateway
 server.port=8083
 
+# Allow multiple origins separated by commas
+spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allowed-origins=http://localhost:5173
+spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allowed-methods=GET,POST,PUT,DELETE,PATCH,OPTIONS
+spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allowed-headers=*
+spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allow-credentials=true
+
 #Routes Configuration
 spring.cloud.gateway.server.webflux.routes[0].id=USERSERVICE
 spring.cloud.gateway.server.webflux.routes[0].uri=lb://USERSERVICE
