--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,10 @@
 			<artifactId>jersey-common</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>com.google.api-client</groupId>
@@ -141,6 +145,7 @@
 	</dependencyManagement>
 
 	<build>
+		<finalName>UserService</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -163,7 +168,6 @@
 						<exclude>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
-							<version>1.18.36</version>
 						</exclude>
 					</excludes>
 				</configuration>
