--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=ApiGateway
 server.port=8083
+eureka.client.serviceUrl.defaultZone=http://service-registry:8761/eureka/
+
 
 # Allow multiple origins separated by commas
-spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allowed-origins=http://localhost:5173
+spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allowed-origins=*
 spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allowed-methods=GET,POST,PUT,DELETE,PATCH,OPTIONS
 spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allowed-headers=*
 spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allow-credentials=true
