--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,29 @@
 spring.application.name=AppointmentBooking
-server.port=8082
+#server.port=8082
 
 ##Database Configuration
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/NepoHeal
-spring.datasource.username=postgres
-spring.datasource.password=sujal
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/NepoHeal
+#spring.datasource.username=postgres
+#spring.datasource.password=sujal
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.main.allow-circular-references=true
+#spring.main.allow-circular-references=true
 
 ##Eureka client configuration
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 ##Email configuration
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=asur0825om@gmail.com
-spring.mail.password=bhzbfhkmxcxdjhzh
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=asur0825om@gmail.com
+#spring.mail.password=bhzbfhkmxcxdjhzh
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+
+eureka.client.serviceUrl.defaultZone=http://service-registry:8761/eureka/
+
+## Cloud Configuration
+spring.config.import=configserver:http://config-server:8090
