--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ConfigurationService
 server.port=8090
 
-eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone= http://service-registry:8761/eureka/
 
 spring.cloud.config.server.git.uri= https://github.com/Asur-SujalShrestha/NepoHeal-CloudConfigurationRepo.git
 spring.cloud.config.server.git.username= ${gitUserName}
