--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
@@ -59,6 +65,7 @@
 	</dependencyManagement>
 
 	<build>
+		<finalName>ServiceRegistry</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
